alignment issues for side drawer navigation menu and ui responsiveness

--- a/src/components/Navigation/NavigaionItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigaionItems/NavigationItem/NavigationItem.css
@@ -1,18 +1,14 @@
 .NavigationItem{
-    margin: 0;
+    margin: 10px 0;
     box-sizing: border-box;
-    display: flex;
-    height: 100%;
-    width: auto;
-    align-items: center;
+    display: block;
+    width: 100%;
 }
 
 .NavigationItem a{
-    color: white;
-    height: 100%;
-    padding: 16px 10px;
+    color:#8F5C2C;
+    width: 100%;
     text-decoration: none;
-    border-bottom: 4px solid transparent;
     box-sizing: border-box;
     display: block;
 }
@@ -22,6 +18,30 @@
 .NavigationItem a.active{
     background-color: #8F5C2C;
     border-bottom: 4px solid #40a4c8;
-    color: white;
+    color: #40a4c8;
+}
+
+@media(min-width: 500px){
+    .NavigationItem{
+        margin: 0; 
+        display: flex;
+        height: 100%;
+        width: auto;
+        align-items: center;
+    }
     
+    .NavigationItem a{
+        color: white;
+        height: 100%;
+        padding: 16px 10px;
+        border-bottom: 4px solid transparent;
+    }
+    
+    .NavigationItem a:hover,
+    .NavigationItem a:active,
+    .NavigationItem a.active{
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40a4c8;
+        color: white;
+    }
 }
